# copilot-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_module.yml
.github/workflows/: ci.yml
core/: config.py
core/api/: evals_routes.py  main.py
core/evaluation/: run_gate.py
core/mcp/: server.py
core/providers/: anthropic_provider.py  base.py  mock.py  openai_provider.py  router.py
core/retrieval/: embedder.py  store.py
docs/: BUILD_PRINCIPLES.md  DEPLOYMENT.md  MILESTONE_live_inference.md  PROVIDERS.md  RC1_CHECKLIST.md
docs/adr/: ADR-001-monorepo-platform-vertical-slice.md  ADR-002-model-agnostic-provider-abstraction.md  ADR-003-retrieval-embedder-pgvector.md  ADR-004-agent-orchestration.md  ADR-005-evaluation-gate.md  ADR-006-mcp-tool-exposure.md
frontend/: index.html
modules/erp_sync_reconciliation/: service.py
modules/erp_sync_reconciliation/agents/: diagnostic_agent.py
modules/erp_sync_reconciliation/evals/: __init__.py  golden.json  harness.py
modules/erp_sync_reconciliation/knowledge/: kb.json
modules/erp_sync_reconciliation/tools/: __init__.py  diagnostics.py
scripts/: verify_live_inference.py
tests/: test_agent_mcp.py  test_api.py  test_evals.py  test_frontend.py  test_rag.py  test_smoke.py
